raffia/tests/error/qualified-rule/unexpected-comma.snap
---
source: raffia/tests/error.rs
---
error: expect token `;`, but `,` received
  ┌─ unexpected-comma.css:4:4
  │
4 │   },
  │    ^


